spacings and contact fix

--- a/src/assets/sass/_benefits.scss
+++ b/src/assets/sass/_benefits.scss
@@ -24,7 +24,7 @@ section.benefits {
 
     .feature-item {
         padding-top: 50px;
-        padding-bottom: 50px;
+        padding-bottom: 20px;
         text-align: center;
         h3 {
             font-size: 30px;
